# spec2class

./: .gitignore  LICENSE  README.md  environment_legacy.yml  pyproject.toml
conda-recipe/: meta.yaml
src/spec2class/: __init__.py  classifier.py  data_processor.py  main.py
src/spec2class/config/: __init__.py  model_config.json
src/spec2class/core/: __init__.py  binning_functions.py  multiclass_prediction_functions.py  prediction_vectors_functions.py  utility_functions.py
src/spec2class/models/: __init__.py  loader.py  manager.py
tests/: README.md  conftest.py  test_basic.py  test_classification.py
